k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  name: maven-demo-app-war-app
  namespace: demo
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    app: maven-demo-app-war-app
    deploymentconfig: maven-demo-app-war-app
  template:
    metadata:
      labels:
        app: maven-demo-app-war-app
        deploymentconfig: maven-demo-app-war-app
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: maven-demo-app-war-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo/maven-demo-app-war:latest
          ports:
            - containerPort: 9443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
