k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: maven-demo-app-war-app
  namespace: demo
  labels:
    app: maven-demo-app-war-app
    app.kubernetes.io/component: maven-demo-app-war-app
    app.kubernetes.io/instance: maven-demo-app-war-app
    app.kubernetes.io/name: maven-demo-app-war-app
    app.kubernetes.io/part-of: maven-demo-app-war-app
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: maven-demo-app-war-app
    deploymentconfig: maven-demo-app-war-app
  type: ClusterIP
  sessionAffinity: None
